refactor: modernize codebase with Java 9-11 idioms (#1839)
* refactor: use Path.of() instead of Paths.get()

Path.of() is the preferred factory method since Java 11.
Paths.get() simply delegates to Path.of() and is
effectively deprecated in modern Java.

* fix: improve resource management and path handling in examples

- Use try-with-resources for Terminal in examples (Java 9+)
- Fix ~ expansion in Path.of() calls (Java doesn't expand ~)
- Add proper executor shutdown in async examples to prevent
  use-after-close on terminal
- Add trackMouse cleanup in finally blocks for mouse examples
- Ensure terminal.stop() before close() in WebTerminalExample
- Restore terminal attributes in CustomTerminalBehaviorExample