@@ -11,7 +11,6 @@ package org.jline.jansi;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.jline.jansi.Ansi.Color;
 import org.junit.jupiter.api.Disabled;
@@ -176,7 +175,7 @@ class AnsiTest {
     @EnabledOnOs(OS.WINDOWS)
     @Disabled("Does not really fail: launch `javaw -jar jansi-xxx.jar` directly instead")
     void testAnsiMainWithNoConsole() throws Exception {
-        Path javaHome = Paths.get(System.getProperty("java.home"));
+        Path javaHome = Path.of(System.getProperty("java.home"));
         Path java = javaHome.resolve("bin\\javaw.exe");
         String cp = System.getProperty("java.class.path");
 
